# SIBR_viewers

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE.md  README.md  README.txt
docs/: Colmap.dox  (+17 more)
docs/doxygen/: CMakeLists.txt  Projects.dox.in  doxyfile.in  doxyfileUpdate.cmake.in
extlibs_code/GlobalMatting/: CMakeLists.txt
extlibs_code/GlobalMatting/src/: globalmatting.cpp  globalmatting.h  guidedfilter.h  main.cpp
src/: CMakeLists.txt
src/core/assets/: ActiveImageFile.cpp  ActiveImageFile.hpp  CMakeLists.txt  CameraRecorder.cpp  CameraRecorder.hpp  Config.hpp  IFileLoader.hpp  ImageListFile.cpp  ImageListFile.hpp  InputCamera.cpp  InputCamera.hpp  Resources.cpp  Resources.hpp  UVUnwrapper.cpp  UVUnwrapper.hpp  sibr_assets.dox
src/core/graphics/: CMakeLists.txt  Camera.cpp  Camera.hpp  Config.hpp  DebugInterface.cpp  DebugInterface.h  DebugInterfaceUtils.cpp  DebugInterfaceUtils.h  DrawingUtils.cpp  DrawingUtils.h  Frustum.cpp  Frustum.hpp  GPUQuery.cpp  GPUQuery.hpp  GUI.cpp  GUI.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  MaterialMesh.cpp  MaterialMesh.hpp  Mesh.cpp  Mesh.hpp  MeshBufferGL.cpp  MeshBufferGL.hpp  Rect.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderUtility.cpp  RenderUtility.hpp  Shader.cpp  Shader.hpp  Shader.inl  Texture.cpp  Texture.hpp  Types.hpp  Utils.cpp  Utils.hpp  Viewport.cpp  (+4 more)
src/core/graphics/imgui/: imconfig.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp  stb_textedit.h  stb_truetype.h
src/core/imgproc/: CMakeLists.txt  Config.hpp  CropScaleImageUtility.cpp  CropScaleImageUtility.hpp  DistordCropUtility.cpp  DistordCropUtility.hpp  MRFSolver.cpp  MRFSolver.h  MeshTexturing.cpp  MeshTexturing.hpp  PoissonReconstruction.cpp  PoissonReconstruction.hpp  sibr_imgproc.dox
src/core/raycaster/: CMakeLists.txt  CameraRaycaster.cpp  CameraRaycaster.hpp  Config.hpp  Intersector2D.cpp  Intersector2D.h  KdTree.hpp  PlaneEstimator.cpp  PlaneEstimator.hpp  Ray.cpp  Ray.hpp  Raycaster.cpp  Raycaster.hpp  VoxelGrid.cpp  VoxelGrid.hpp  sibr_raycaster.dox
src/core/raycaster/nanoflann/: nanoflann.hpp
src/core/renderer/: AddShadowRenderer.cpp  AddShadowRenderer.hpp  BinaryMeshRenderer.cpp  BinaryMeshRenderer.hpp  BlurRenderer.cpp  BlurRenderer.hpp  CMakeLists.txt  ColoredMeshRenderer.cpp  ColoredMeshRenderer.hpp  Config.hpp  CopyRenderer.cpp  CopyRenderer.hpp  DepthRenderer.cpp  DepthRenderer.hpp  NormalRenderer.cpp  NormalRenderer.hpp  PoissonRenderer.cpp  PoissonRenderer.hpp  PositionRender.cpp  PositionRender.hpp  RenderMaskHolder.cpp  RenderMaskHolder.hpp  ShadowMapRenderer.cpp  ShadowMapRenderer.hpp  TexturedMeshRenderer.cpp  TexturedMeshRenderer.hpp  sibr_renderer.dox
src/core/renderer/shaders/: copy.frag  longlat.gp  longlat.vp  longlatColor.fp  longlatDepth.fp  normalRenderer.vp  normalRendererGen.gp  texture-invert.frag  textured_mesh.frag
src/core/scene/: BasicIBRScene.cpp  BasicIBRScene.hpp  CMakeLists.txt  CalibratedCameras.cpp  CalibratedCameras.hpp  Config.hpp  ICalibratedCameras.hpp  IIBRScene.hpp  IInputImages.hpp  IParseData.hpp  IProxyMesh.hpp  InputImages.cpp  InputImages.hpp  ParseData.cpp  ParseData.hpp  ProxyMesh.cpp  ProxyMesh.hpp  RenderTargetTextures.cpp  RenderTargetTextures.hpp  sibr_scene.dox
src/core/system/: Array2d.hpp  ByteStream.cpp  ByteStream.hpp  CMakeLists.txt  CommandLineArgs.cpp  CommandLineArgs.hpp  Config.cpp  Config.hpp  LoadingProgress.cpp  LoadingProgress.hpp  MD5.h  Matrix.cpp  Matrix.hpp  MatrixBasePlugin.hpp  MatrixPlugin.hpp  Quaternion.cpp  Quaternion.hpp  Rect.hpp  SimpleTimer.hpp  String.cpp  String.hpp  ThreadIdWorker.cpp  ThreadIdWorker.hpp  Transform3.hpp  Utils.cpp  Utils.hpp  Vector.cpp  Vector.hpp  VectorUtils.cpp  VectorUtils.hpp  XMLTree.cpp  XMLTree.h  sibr_system.dox
src/core/video/: CMakeLists.txt  Config.hpp  FFmpegVideoEncoder.cpp  FFmpegVideoEncoder.hpp  MultipleVideoDecoder.hpp  Video.cpp  Video.hpp  VideoUtils.cpp  VideoUtils.hpp  sibr_video.dox
src/core/view/: BasicIBRScene.cpp  BasicIBRScene.hpp  CMakeLists.txt  CalibratedCameras.cpp  CalibratedCameras.hpp  Config.hpp  DatasetView.cpp  DatasetView.hpp  FPSCamera.cpp  FPSCamera.hpp  FPSCounter.cpp  FPSCounter.hpp  IBRBasicUtils.cpp  IBRBasicUtils.hpp  ICameraHandler.cpp  ICameraHandler.hpp  ImageView.cpp  ImageView.hpp  ImagesGrid.cpp  ImagesGrid.hpp  InputImages.cpp  InputImages.hpp  InteractiveCameraHandler.cpp  InteractiveCameraHandler.hpp  MultiMeshManager.cpp  MultiMeshManager.hpp  MultiViewManager.cpp  MultiViewManager.hpp  Orbit.cpp  Orbit.hpp  ParseData.cpp  ParseData.hpp  ProxyMesh.cpp  ProxyMesh.hpp  RenderTargetTextures.cpp  RenderTargetTextures.hpp  RenderingMode.cpp  RenderingMode.hpp  Resources.cpp  Resources.hpp  (+15 more)
src/core/view/interface/: CamEditMeshViewer.cpp  CamEditMeshViewer.h  Interface.cpp  Interface.h  InterfaceUtils.cpp  InterfaceUtils.h  MeshViewer.cpp  MeshViewer.h
src/core/view/shaders/: alpha_colored_mesh.frag  alpha_colored_mesh.vert  alpha_colored_per_triangle_normals.geom  alpha_colored_per_triangle_normals.vert  alpha_colored_per_vertex_normals.geom  alpha_colored_per_vertex_normals.vert  alpha_points.frag  alpha_points.vert  alpha_uv_tex.frag  alpha_uv_tex_array.frag  mesh_debugview.fp
src/projects/: trackChanges.sh
src/projects/gaussianviewer/apps/gaussianViewer/: main.cpp
src/projects/gaussianviewer/renderer/: CMakeLists.txt  Config.hpp  GaussianView.cpp  GaussianView.hpp
src/projects/hierarchyviewer/renderer/: CMakeLists.txt  HierarchyView.cpp  HierarchyView.hpp
src/projects/ulr/apps/: CMakeLists.txt
src/projects/ulr/documentation/: IBR_ULR.dox  ulr_doc.cmake  ulr_preprocess.dox
src/projects/ulr/preprocess/: CMakeLists.txt  bundle.py  convert_vid.sh  createListImages.sh  ibr_convert_old_to_new.py  ibr_preprocess_rc_to_sibr.py  settings.ini.in  ulr_preprocess.dox
src/projects/ulr/renderer/: CMakeLists.txt  Config.hpp  TexturedMeshView.cpp  TexturedMeshView.hpp  ULRRenderer.cpp  ULRRenderer.hpp  ULRV2Renderer.cpp  ULRV2Renderer.hpp  ULRV2View.cpp  ULRV2View.hpp  ULRV3Renderer.cpp  ULRV3Renderer.hpp  ULRV3View.cpp  ULRV3View.hpp  ULRView.cpp  ULRView.hpp
(+96 files in other folders)
